[package]
name = "comm_service_bug"
version = "0.1.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]

[dependencies]
error-chain = "0.10"
futures = "0.1"
futures-cpupool = "=0.1.3"
log = "0.3"
log4rs = "0.6"
regex = "0.2"
rocket = "=0.2.6"
rocket_codegen = "=0.2.6"
rocket_contrib = "=0.2.6"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
structopt = "0.0"
structopt-derive = "0.0"
tokio-timer = "0.1"
url = "1.4"
