[package]
name = "comm_service_bug"
version = "0.1.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]

[dependencies]
derive-new = "0.4"
error-chain = "0.10"
log = "0.3"
log4rs = "0.6"
reqwest = "^0.5.1"
rouille = "1.0.1"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
structopt = "0.0"
structopt-derive = "0.0"
